# meta_scalar_hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  environment.py  graders.py  models.py  reward.py  tasks.py
server/: __init__.py  app.py
tests/: test_environment.py  test_server_api.py
